added featured section

--- a/index.html
+++ b/index.html
@@ -31,17 +31,36 @@
 
         <div class="featured-container">
             <div class="container-images-1">
-                <img src="images/pngwing 6.png" alt="">
+                <img class="image-1" src="images/pngwing 6.png" width="200px">
+                <h4>Pink Flower Tree</h4>
                
             </div>
             <div class="container-images-2">
-                <img src="images/pngwing 5.png" alt="">
+                <img src="images/pngwing 5.png" width="300px">
+                <h4>Pink Flower Tree</h4>
 
             </div>
             <div class="container-images-3">
-              <img src="images/pngwing 7.png" alt="">
+              <img src="images/pngwing 7.png" width="250px">
+              <h4>Pink Flower Tree</h4>
             </div>
         </div>
+
+        </section>
+
+        <section class="delivery-section">
+             <div class="delivery">
+                <img src="images/group 57.png" alt="">
+                <h4 class="delivery-description">Same Day Delivery. Click & Collect.</h4>
+             </div>
+             <div class="delivery">
+                <img src="images/group 58.png" alt="">
+                <h4 class="delivery-description">Fresh Flowers. Local Growers.</h4>
+             </div>
+             <div class="delivery">
+                <img src="images/group 59.png" alt="">
+                <h4 class="delivery-description">24/7 Free Support.</h4>
+             </div>
 
         </section>
 
