featured problem solve

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 
         <section class="delivery-section">
              <div class="delivery">
-                <img src="images/group 57.png" alt="">
+                <img src="images/Group 57.png 57.png" alt="">
                 <h4 class="delivery-description">Same Day Delivery. Click & Collect.</h4>
              </div>
              <div class="delivery">
-                <img src="images/group 58.png" alt="">
+                <img src="images/Group 58.png 58.png" alt="">
                 <h4 class="delivery-description">Fresh Flowers. Local Growers.</h4>
              </div>
              <div class="delivery">
-                <img src="images/group 59.png" alt="">
+                <img src="images/Group 59.png 59.png" alt="">
                 <h4 class="delivery-description">24/7 Free Support.</h4>
              </div>
 
