--- a/index.html
+++ b/index.html
@@ -50,18 +50,25 @@
 
         <section class="delivery-section">
              <div class="delivery">
-                <img src="images/Group 57.png 57.png" alt="">
+                <img src="images/Group 57.png" alt="">
                 <h4 class="delivery-description">Same Day Delivery. Click & Collect.</h4>
              </div>
              <div class="delivery">
-                <img src="images/Group 58.png 58.png" alt="">
+                <img src="images/Group 58.png" alt="">
                 <h4 class="delivery-description">Fresh Flowers. Local Growers.</h4>
              </div>
              <div class="delivery">
-                <img src="images/Group 59.png 59.png" alt="">
+                <img src="images/Group 59.png" alt="">
                 <h4 class="delivery-description">24/7 Free Support.</h4>
              </div>
-
+        </section>
+        <section class="offer-section">
+            <div class="offer-text">
+                <h1 class="offer-title">Hot Deal ! Sale Up To 25% <span>Off</span></h1>
+                <p class="offer-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <button class="btn-class">Sign Up</button>
+            </div>
+                <img src="images/pngwing 8.png" alt="">
         </section>
 
     </main>
