added signup box

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <main>
         <section class="featured-section">
-             <h3 class="first-section-title">Our Featured Flowers</h3>
-            <p class="first-section-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+             <h3 class="section-title">Our Featured Flowers</h3>
+            <p class="section-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
 
         <div class="featured-container">
             <div class="container-images-1">
@@ -45,8 +45,7 @@
               <h4>Pink Flower Tree</h4>
             </div>
         </div>
-
-        </section>
+         </section>
 
         <section class="delivery-section">
              <div class="delivery">
@@ -70,8 +69,46 @@
             </div>
                 <img src="images/pngwing 8.png" alt="">
         </section>
+     <!-- instagram section starts from here  -->
+     <section class="instagram-section">
+            <h3 class="section-title">Instagram</h3>
+           <p class="section-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
 
+       <div class="instagram-container">
+           <div class="insta-images-1">
+               <img src="images/Flower 01.png" width="300px">
+           </div>
+           <div class="instagram-images-2">
+               <img src="images/Rectangle 4.png" width="300px">
+           </div>
+
+           <div class="instagram-images-3">
+             <img src="images/Rectangle 5.png" width="300px">
+           </div>
+
+           <div class="instagram-images-4">
+             <img src="images/Rectangle 6.png" width="300px">
+           </div>
+       </div>
+        </section>
+
+        <!-- signup section starts from here  -->
+
+        <section class="signup-section">
+            <div class="signup-text">
+                <h2>Get The Latest Deals</h2>
+                <p>$30 coupon for first shopping</p>
+            </div>
+            <div class="signup-box">
+                <form class="submit" action="">
+                    <input type="text" placeholder="Enter your email here....">
+                </form>
+                <input class="btn-class" type="button" value="Subscribe">
+            </div>
+        </section>
     </main>
+
+    
     <footer>
 
     </footer>
