--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <div class="banner">
             <div class="banner-text">
                 <h1 class="banner-title">Let's make <br>beautiful flowers a <br>part of your life.</h1>
-                <p class="banner-description">It is a long established fact that a reader will be distracted by the
-                    readable <br>content of a page when looking at its layout. The point of using Lorem Ipsum is
-                    <br>that it has a more-or-less normal distribution of letters.</p>
+                <p class="banner-description">For the best and freshest flowers in <br>Flower Shop has exactly what you’re looking for! <br>Check out our wide selection of flower.</p>
                 <button class="btn-class">Shop Now</button>
             </div>
             <img class="banner-image" src="images/pngwing 10.png">
@@ -31,23 +29,22 @@
     <main>
         <section class="featured-section">
             <h3 class="section-title">Our Featured Flowers</h3>
-            <p class="section-description">It is a long established fact that a reader will be distracted by the
-                readable <br>content of a page when looking at its layout.</p>
+            <p class="section-description">For the best and freshest flowers in Flower Shop has exactly what you’re looking for! <br>Check out our wide selection of flower.</p>
 
             <div class="featured-container">
                 <div class="container-images-1">
                     <img class="image-1" src="images/pngwing 6.png" width="200px">
-                    <h4>Pink Flower Tree</h4>
+                    <h4>Garden Tulip Flower</h4>
 
                 </div>
                 <div class="container-images-2">
                     <img src="images/pngwing 5.png" width="300px">
-                    <h4>Pink Flower Tree</h4>
+                    <h4>Transvaal Daisy Flower</h4>
 
                 </div>
                 <div class="container-images-3">
                     <img src="images/pngwing 7.png" width="250px">
-                    <h4>Pink Flower Tree</h4>
+                    <h4>Tulipa Hungarica Flower</h4>
                 </div>
             </div>
         </section>
@@ -73,9 +70,8 @@
 
         <section class="offer-section">
             <div class="offer-text">
-                <h1 class="offer-title">Hot Deal ! Sale Up To 25% <span>Off</span></h1>
-                <p class="offer-description">It is a long established fact that a reader will be distracted by the
-                    readable <br>content of a page when looking at its layout.</p>
+                <h1 class="offer-title">Hot Deal ! Sale Up To 30% <span>Off</span></h1>
+                <p class="offer-description">Check out the Exotic Fresh Flower Bouquets to add more <br> freshness to your Love & Romance.</p>
                 <button class="btn-class">Sign Up</button>
             </div>
             <img src="images/pngwing 8.png" alt="">
@@ -85,8 +81,7 @@
 
         <section class="instagram-section">
             <h3 class="section-title">Instagram</h3>
-            <p class="section-description">It is a long established fact that a reader will be distracted by the
-                readable <br>content of a page when looking at its layout.</p>
+            <p class="section-description">“Flowers always make people better, happier and more helpful; they are sunshine, <br>food and medicine for the soul.” – Luther Burbank</p>
 
             <div class="instagram-container">
                 <div class="insta-images-1">
@@ -127,8 +122,7 @@
     <footer>
         <div class="end-area">
             <h2 class="end-title"><span>Flower</span>Shop</h2>
-            <p class="end-description">It is a long established fact that a reader will be distracted by the readable
-                <br>content of a page when looking at its layout.</p>
+            <p class="end-description">Let us convey your sentiment with the perfect gift of flowers. We deliver flower to all cities. <br>Our delivery service is famous for our exquisite and natural floral arrangements, <br>which uses quality imported and local flowers, foliage and accompaniments.</p>
 
             <small>@2020-2023, FlowerShop.com. All rights reserved. </small>
         </div>
